<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:id="@+id/popup"
   android:layout_height="wrap_content"
   android:background="@android:drawable/alert_light_frame"
   android:orientation="vertical" >
 
<TextView
    android:id="@+id/tvHeadpopups"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/LIGHTSKYBLUE"
    android:text="@string/dailygoal"
    android:textAppearance="?android:attr/textAppearanceLarge" />
 <View 
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="@color/LIGHT_GREEN"
     />
<LinearLayout 
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<Button
   android:id="@+id/btncreateone"
   android:layout_marginTop="10dp"
   android:layout_gravity="center_horizontal"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_weight="1"
   style="?android:attr/buttonBarButtonStyle"
   android:text="@string/setgoal" />
<Button
   android:id="@+id/btnviewgoal"
   android:layout_marginTop="10dp"
   android:layout_gravity="center_horizontal"
   android:layout_weight="1"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:text="@string/defaultgoal" 
   style="?android:attr/buttonBarButtonStyle"/>
 </LinearLayout>
</LinearLayout>
